<resources>
    <string name="app_name">ArProject</string>
    <string name="furnish_ar">Furnish AR</string>
    <string name="innovation_lab">TheCodeWork™ Research &amp; Innovation Lab</string>
    <string name="home_meets_lifestyle">When your home meets your lifestyle</string>
    <string name="login">Log in</string>
    <string name="signup">Sign Up</string>
    <string name="continue_with">Continue with</string>
    <string name="or">or</string>
    <string name="enter_your_name">Enter Name</string>
    <string name="enter_email">Enter Email</string>
    <string name="enter_password">Password</string>
    <string name="create_account">Create Account</string>
    <string name="close_ar_mode">Close AR Mode</string>
    <string name="ok">OK</string>
    <string name="are_you_sure_you_want_to_close_the_ar_mode">Are you sure you want to close the AR Mode?</string>
    <string name="cancel">Cancel</string>
    <string name="comfy_sofa">Comfy Sofa</string>
    <string name="add_to_cart">Add to Cart</string>
    <string name="_1">1</string>
    <string name="dollar_sign">$</string>
    <string name="price">5678</string>
    <string name="_2_colors">+ 2 colors</string>
    <string name="password_should_be_in_alphanumeric_pattern">Password should be in Alphanumeric pattern</string>
    <string name="alert">Alert!</string>
    <string name="view_in_ar">View in AR</string>
    <string name="shop_by_category">Shop by Category</string>
    <string name="top_trending_products">Top Trending Products</string>
    <string name="see_all">See All</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="my_order">My Order</string>
    <string name="notification">Notification</string>
    <string name="settings">Settings</string>
    <string name="logout">Logout</string>
    <string name="showing_sofas">Showing Sofas</string>
    <string name="items">20,000 items</string>
    <string name="sort">Sort</string>
    <string name="filter">Filter</string>
    <string name="search">Search…</string>
    <string name="modelBlueChair">"https://arvr.google.com/scene-viewer/1.0?file=https://drive.google.com/u/2/uc?id=1ZrVO6LdVIZS8kfMtQCcP4LmUNk2BlINj&amp;export=download"</string>
    <string name="modelChair">"https://arvr.google.com/scene-viewer/1.0?file=https://modelviewer.dev/assets/ShopifyModels/Chair.glb"</string>
</resources>