<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/img"
    android:orientation="vertical"
    android:id="@+id/linearLayout"
    tools:context=".SplashScreen.OnBoardingScreen2">

    <TextView
        android:id="@+id/tvfurnish"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/furnish_ar"
        android:fontFamily="@font/postnobillscolombo_bold"
        android:gravity="center"
        android:layout_marginTop="110dp"
        android:textColor="@color/Brown"
        android:textSize="36sp"/>
    <TextView
        android:id="@+id/tvInnovation"
        android:textColor="@color/black"
        android:layout_width="match_parent"
        android:text="@string/innovation_lab"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_light"
        android:padding="2dp"
        android:textSize="18sp"
        android:gravity="center"
        android:shadowColor="@color/OffWhite"
        android:shadowDx="8"
        android:shadowDy="8"
        android:shadowRadius="1.8" />
    <TextView
        android:id="@+id/tvHomeMeets"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/home_meets_lifestyle"
        android:fontFamily="@font/poppins_light"
        android:gravity="center"
        android:textColor="@color/Brown"
        android:textSize="16sp"/>

    <TextView
        android:id="@+id/tvLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="30dp"
        android:text="@string/login"
        android:textSize="20sp"
        android:textColor="@color/Brown"/>
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnSignUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/ic_login_button"
        android:layout_marginTop="10dp"
        android:paddingLeft="45dp"
        android:paddingRight="45dp"
        android:text="@string/signup"
        android:textSize="20sp"
        android:fontFamily="@font/poppins_medium"
        android:textColor="@color/white_new"/>


</LinearLayout>