<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.cardview.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="@color/OffWhite"
        app:cardCornerRadius="@dimen/space_20">

        <LinearLayout
            android:layout_width="@dimen/space_300"
            android:layout_height="@dimen/space_220"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/space_20"
                android:fontFamily="@font/poppins_semibold"
                android:text="@string/close_ar_mode"
                android:textColor="@color/Brown"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/tvText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/space_16"
                android:layout_marginTop="@dimen/space_12"
                android:fontFamily="@font/poppins_semibold"
                android:gravity="center_horizontal"
                android:text="@string/are_you_sure_you_want_to_close_the_ar_mode"
                android:textColor="@color/Light_Brown"
                android:textSize="16sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/space_16"
                android:layout_marginTop="@dimen/space_32"
                android:layout_marginBottom="@dimen/space_20"
                android:orientation="horizontal">

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btnCancel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginHorizontal="@dimen/space_20"
                    android:layout_weight="1"
                    android:background="@drawable/ic_login_button"
                    android:fontFamily="@font/poppins_medium"
                    android:text="@string/cancel"
                    android:textAllCaps="false"
                    android:textColor="@color/white_new"
                    android:textSize="16sp" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btnOk"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginHorizontal="@dimen/space_20"
                    android:layout_weight="1"
                    android:background="@drawable/ic_login_button"
                    android:fontFamily="@font/poppins_medium"
                    android:text="@string/ok"
                    android:textAllCaps="false"
                    android:textColor="@color/white_new"
                    android:textSize="16sp" />
            </LinearLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>